syntax = "proto3";
package prismatics.server;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos_proto/cosmos.proto";
import "prismatics/historical_price.proto";

option go_package = "github.com/prism-finance/prismatics/server";

message QueryHistoricalPriceRequest {
  string denom = 1;
  string quote = 2;
  TimeResolution time_resolution = 3 [(gogoproto.nullable) = false];
  string from = 4 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string to = 5 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}

message QueryHistoricalPriceResponse {
  repeated HistoricalPrice historical_prices = 1 [(gogoproto.nullable) = false];
}